tests/paczka1/small_fuzzy/48734786.err
Error in line 7: Eff4u2V A913 201,96
Error in line 11: CvCY3mKHv A508 -1,9
Error in line 10: unbKJ5Cxu A645 28,1
Error in line 1: Eff4u2V A913 45,0
